@@ -44,6 +44,7 @@ struct _configuration {
 	int ignore_excludes;
 	int no_md5_check;
 	int interactive;
+	int no_dep;
 };
 typedef struct _configuration rc_config;
 
